--- a/package.json
+++ b/package.json
@@ -8,49 +8,54 @@
   "files": [
     "lib"
   ],
+  "type": "module",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "sideEffects": false,
+  "engines": {
+    "node": ">=16"
+  },
   "repository": "git@github.com:BlackGlory/observe.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
+    "prepare": "ts-patch install -s",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --config jest.config.js",
-    "test:coverage": "jest --coverage --config jest.config.js",
-    "prepublishOnly": "run-s clean build",
+    "test": "vitest --run",
+    "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
-    "build": "run-s build:*",
-    "build:compile": "tsc --project tsconfig.build.json --module commonjs --target es2018 --outDir lib",
-    "build:patch": "tscpaths -p tsconfig.build.json -s ./src -o ./lib",
+    "build": "tsc --project tsconfig.build.json",
     "release": "standard-version"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "run-s lint build test",
+      "pre-commit": "run-s prepare lint build test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "devDependencies": {
-    "@blackglory/wait-for": "^0.5.1",
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
-    "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.26.0",
+    "@blackglory/wait-for": "^0.7.1",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.36.0",
     "husky": "^4.3.6",
-    "jest": "^27.4.7",
+    "jsdom": "^21.1.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
-    "ts-jest": "^27.1.2",
-    "tscpaths": "^0.0.9",
-    "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "ts-patch": "^2.1.0",
+    "tslib": "^2.5.0",
+    "typescript": "4.8",
+    "typescript-transform-paths": "^3.4.6",
+    "vite": "^4.2.0",
+    "vite-tsconfig-paths": "^4.0.7",
+    "vitest": "^0.29.3"
   },
   "dependencies": {
-    "iterable-operator": "^2.1.0",
-    "rxjs": "^7.5.6"
+    "iterable-operator": "^4.0.3",
+    "rxjs": "^7.8.0"
   }
 }
