--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "types": "lib/index.d.ts",
   "sideEffects": false,
   "engines": {
-    "node": ">=16"
+    "node": ">=22"
   },
   "repository": "git@github.com:BlackGlory/observe.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
     "prepare": "ts-patch install -s",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
+    "lint": "eslint --quiet src __tests__",
     "test": "vitest --run",
     "prepublishOnly": "run-s prepare clean build",
     "clean": "rimraf lib",
@@ -35,28 +35,28 @@
     }
   },
   "devDependencies": {
-    "@blackglory/wait-for": "^0.7.1",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
+    "@blackglory/wait-for": "^0.8.1",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/js": "^9.30.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.36.0",
+    "eslint": "^9.30.1",
     "husky": "^4.3.6",
-    "jsdom": "^21.1.1",
+    "jsdom": "^26.1.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
+    "rimraf": "^6.0.1",
     "standard-version": "^9.5.0",
-    "ts-patch": "^2.1.0",
-    "tslib": "^2.5.0",
-    "typescript": "4.8",
-    "typescript-transform-paths": "^3.4.6",
-    "vite": "^4.2.0",
-    "vite-tsconfig-paths": "^4.0.7",
-    "vitest": "^0.29.3"
+    "ts-patch": "^3.3.0",
+    "tslib": "^2.8.1",
+    "typescript": "5.8.3",
+    "typescript-eslint": "^8.36.0",
+    "typescript-transform-paths": "^3.5.5",
+    "vite": "^7.0.4",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
-    "iterable-operator": "^4.0.3",
-    "rxjs": "^7.8.0"
+    "iterable-operator": "^5.1.0",
+    "rxjs": "^7.8.2"
   }
 }
